# DevAgent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  sample_input.py
docs/: architecture_guide.md  architecture_overview.md  architecture_study_guide.md
scripts/: README.md  run_explain.ps1  run_fix.ps1  run_gen_api.ps1
src/: README.md
src/dev_agent_cli/: __init__.py  cli.py  config.py  llm.py  main.py  models.py  orchestrator.py  prompts.py  tools.py
test_cases/: README.md
test_cases/inputs/: api_requirement.txt  sample_service.py
test_cases/reports/: test_report_2026-04-13.md  test_report_2026-04-13_v3.md
test_cases/templates/: test_log_template.md
tests/: README.md  test_cli.py  test_orchestrator.py
